# PDE_Module

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.ipynb  test.py  todo.md
.opencode/agents/: CAE_Engineer.md
.opencode/plans/: GUI_plan.md
Benchmark/Functional_BC/: LDC_Graph Function.py  LDC_Graph_Capture.py  LDC_NoGraph Function.py  LDC_No_Graph.py
examples/: 2D_Heat_Equation.py  Cylinder_Transient.py  ExperimentalHeat.py  ExperimentalLDC  ExperimentalLDC.py  HeatEquation copy.py  HeatEquation.py  LDC.py  LDC_ACM.py  LDC_Stokes.py  LDC_Transient.py  div_test.py  grad_test.py
examples/Benchmark/: LDC_Graph_Capture.py  LDC_No_Graph.py
examples/Cylinder/: Cylinder_Steady_State.py  Cylinder_Transient.py
examples/FiniteVolume/: HeatEquation2D.py  LDC.py
examples/GUI/: cube.msh  cube.vtk
examples/LBM/: ChannelFlow.py  Channel_Flow_LBM.py  Fused_Kernel.py  LBM_Fused Channel.py  LBM_Fused.py  LBM_Fused_Cylinder.py  LBM_Fused_LDC.py  LDC.py
examples/LDC/: LDC_Graph_Capture.py  LDC_LBM.py  LDC_No_Graph.py  LDC_RK2.py
examples/Mesh/: EulerianMesh.py  gmsh_generator.py  gmsh_generator_example.py  mesh_pyvista.py
examples/RungeKatta/: LDC_No_Graph.py  LDC_RK2.py
examples/example_1D/: Heat_1D.py
examples/experimental_examples/: Cylinder_Steady_State.py  Cylinder_Transient.py  LDC_Transient.py
examples/wave2d/: Defraction.py  Interference.py  InterferenceWave.py  WaveBounday.py  standingWave.py
src/pde_module/: __init__.py  types.py
tests/: ImmersedBoundary.py  ReadMe.md  dampingLayer.py  elementWise.py
tests/FDM/: test_LDC_RK2.py  (+4 more)
(+251 files in other folders)
